--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,16 +137,26 @@ Filters
 #case-search-statement {
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
+  line-height: 1.7;
   color: #ffffff;
   text-align: center;
   font-size: 2em;
+}
+.filter-statement {
+  margin-bottom: 1em;
+}
+.filtered .totals-amount {
+  color: #bd261d;
+  background-color: #fff;
+  padding: 2px 8px;
+  font-weight: bold;
 }
 .number-of-incidents {
   text-transform: capitalize;
 }
 .clickable {
   background-color: rgba(189, 38, 29, 0.8);
-  padding: 8px 24px 8px 8px;
+  padding: 2px 26px 2px 8px;
   position: relative;
   white-space: nowrap;
 }
@@ -158,7 +168,7 @@ Filters
   display: inline-block;
   width: 22px;
   height: 22px;
-  margin-right: 4px;
+  right: 2px;
   font-weight: 700;
   line-height: 18px;
   font-size: 15px;
