--- a/less/style.less
+++ b/less/style.less
@@ -144,6 +144,10 @@ Filters
 #results-wrapper {
   width:70%;
   float:left;
+
+  .loading {
+    color: @cr-lightest;
+  }
 }
 .results-wrapper-inner, .detail-wrapper, .search-statement-wrapper {
   background-color:rgba(0,0,0,.7);
