--- a/templates/_results_templates.html
+++ b/templates/_results_templates.html
@@ -1,13 +1,6 @@
 <script type="text/javascript">
-  var site_path = '{{ site_path }}';
+  var site_path = {% if site_path == '' %}'/'{% else %}'{{ site_path }}'{% endif %};
 </script>
-
-{% if BUILD_PATH %}
-  <script type="text/javascript" src="{{ url_for('cpd_settlements.static', filename='data/combined.min.js') }}"></script>
-{% else %}
-  <script type="text/javascript" src="{{ url_for('cpd_settlements.static', filename='data/cases.js') }}"></script>
-  <script type="text/javascript" src="{{ url_for('cpd_settlements.static', filename='data/officers.js') }}"></script>
-{% endif %}
 
 {% if BUILD_PATH %}
   <script type="text/javascript" src="{{ url_for('cpd_settlements.static', filename='js/search-libs.min.js') }}"></script>
