can we please just be done messing with url_for?

--- a/templates/_results_templates.html
+++ b/templates/_results_templates.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-  var site_path = {% if site_path == '' %}'/'{% else %}'{{ site_path }}'{% endif %};
+  var site_path = '{{ site_path }}';
 </script>
 
 {% if BUILD_PATH %}
