--- a/less/style.less
+++ b/less/style.less
@@ -177,7 +177,7 @@ Filters
 
 }
 .totals-label {
-  
+
 }
 .filtered .totals-amount {
   color:@cr-alert;
@@ -1163,10 +1163,10 @@ Intro Page
     opacity:0;
   }  
   #bg-12 {
-    background-image: url("../images/02-IMG_9158.jpg");
-    -webkit-filter: blur(5px);
-    -moz-filter: blur(5px);
-    filter: blur(5px);
+    background-image: url("../images/02-IMG_9158-blur.jpg");
+    // -webkit-filter: blur(5px);
+    // -moz-filter: blur(5px);
+    // filter: blur(5px);
   }
 
 }
@@ -1557,10 +1557,10 @@ body.not-nested {
 }
 
 .not-nested #bg-static {
-  background-image: url("../images/02-IMG_9158.jpg");
-  -webkit-filter: blur(10px);
-  -moz-filter: blur(10px);
-  filter: blur(10px);
+  background-image: url("../images/02-IMG_9158-blur.jpg");
+  // -webkit-filter: blur(10px);
+  // -moz-filter: blur(10px);
+  // filter: blur(10px);
   display:block;
 }
 .not-nested #bg-solid {
