make sure ROOT_URL is set properly when publishing

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -1,7 +1,7 @@
 {% extends '_base.html' %}
 
 {% block opengraph %}
-  <meta property="og:url" content="http://{{ ROOT_URL }}{{ site_path }}{{ route }}" />
+  <meta property="og:url" content="http://{{ ROOT_URL }}/{{ route }}" />
   <meta property="og:title" content="{{ title }}" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="{{ opengraph_image }}" />
