--- a/templates/_results_templates.html
+++ b/templates/_results_templates.html
@@ -157,7 +157,7 @@
   </div>
   <div class="totals-statement"><span class="totals-label">
 
-  <% if ( incidents == "zero" ) { %> 
+  <% if ( incidents == "no" ) { %> 
     Please try another search.</span>
   <% } else if ( incidents == "one" ) {  %>
     This settlement cost Chicago</span> <span class="totals-amount">$<%= payments.formatMoney(0) %>.</span>
