--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,7 +140,7 @@ Filters
 #case-search-statement {
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
-  line-height: 1.7;
+  line-height: 1.6;
   color: #ffffff;
   text-align: center;
   font-size: 2em;
@@ -151,7 +151,7 @@ Filters
 .filtered .totals-amount {
   color: #bd261d;
   background-color: #fff;
-  padding: 2px 8px;
+  padding: 0px 3px;
   font-weight: bold;
 }
 .number-of-incidents {
@@ -159,8 +159,7 @@ Filters
 }
 .clickable {
   background-color: rgba(189, 38, 29, 0.8);
-  padding: 2px 26px 2px 8px;
-  position: relative;
+  padding-left: 3px;
   white-space: nowrap;
 }
 .clickable .x {
@@ -169,14 +168,14 @@ Filters
   border-radius: 50%;
   padding: 0;
   display: inline-block;
+  margin: 6px 2px;
+  vertical-align: top;
   width: 22px;
   height: 22px;
   right: 2px;
   font-weight: 700;
   line-height: 18px;
   font-size: 15px;
-  position: absolute;
-  top: 2px;
 }
 .clickable .x:hover {
   color: #bd261d;
