--- a/templates/officer.html
+++ b/templates/officer.html
@@ -34,13 +34,8 @@
 					</div>
 					
 					<div class="years-of-service"></div>
-					{% if officer.race %}
-						<div class="officer-race">{{ officer.race }}</div>
-					{% endif %}
-
-					{% if officer.note %}
-						<div class="notes">{{ officer.note }}</div>
-					{% endif %}
+					<div class="officer-race"></div>
+					<div class="note"></div>
 				</div>
 			</div>
 			<div id="officer-case-map" class="detail-wrapper officer-expanded">
@@ -93,12 +88,17 @@
 	      (c ? d + Math.abs(n - i).toFixed(c).slice(2) : "");
 	};
 
-	var officerCaseList;
-	var initialCase = { latitude:41.8781, longitude:-87.6298 };
-
 	function renderOfficerInfo() {
 		calculateService();
 		$('.number-of-cases').text(officerCaseList.length + ' cases');
+		
+		if (officerObj.race != '') {
+			$('.officer-race').text('Race: ' + officerObj.race);
+		}
+		if (officerObj.note != '') {
+			$('.note').text('Note: ' + officerObj.race);
+		}
+		
 	}
 
 	function calculateService(){
@@ -147,6 +147,16 @@
 		);
 	}
 
+	function findOfficer(slug) {
+		for (i = 0; i < officers_json.length; i++) {
+		    var officerObj = officers_json[i];
+		    if (officerObj.slug == slug) {
+		        return officerObj;
+		        break;
+		    }
+		}
+	}
+
 	function getCases(officer) {
 		var officerCases = [];
 
@@ -175,8 +185,14 @@
 	    };
 	}
 
+	var officerCaseList;
+	var officerObj;
+	var initialCase = { latitude:41.8781, longitude:-87.6298 };
+
 	loadData(function() {
-		officerCaseList = getCases( {{ officer.slug }} );
+		var slug = {{ officer.slug }};
+		officerObj = findOfficer(slug);
+		officerCaseList = getCases(slug);
 		google.maps.event.addDomListener(window, 'load', init(initialCase, officerCaseList));
 		renderOfficerInfo();
 		renderCaseList();
