use the primary_cause field from the case sheet instead of payments sheet

--- a/templates/_case_search_form.html
+++ b/templates/_case_search_form.html
@@ -187,129 +187,61 @@
         <select data-placeholder="Select primary causes" id="primary_cause" name="primary_causes[]" class="chosen">
           <option value="">Any</option>
           
-            <option value="48 HOUR VIOLATION">48 HOUR VIOLATION</option>
+            <option value="Assault">Assault</option>
           
-            <option value="4TH AMENDMENT">4TH AMENDMENT</option>
+            <option value="Battery">Battery</option>
           
-            <option value="ALLEGED MONELL/CIVIL RIGHTS VIOLATIONS">ALLEGED MONELL/CIVIL RIGHTS VIOLATIONS</option>
+            <option value="Conspiracy">Conspiracy</option>
           
-            <option value="ALLEGED SEIZURE & DESTRUCTION PROPERTY">ALLEGED SEIZURE & DESTRUCTION PROPERTY</option>
+            <option value="Deliberate Indifference">Deliberate Indifference</option>
           
-            <option value="BATTERY">BATTERY</option>
+            <option value="Due Process Violation">Due Process Violation</option>
           
-            <option value="CIVIL RIGHTS">CIVIL RIGHTS</option>
+            <option value="Equal protection violation (racial bias)">Equal protection violation (racial bias)</option>
           
-            <option value="CIVIL RIGHTS - EXCESSIVE FORCE">CIVIL RIGHTS - EXCESSIVE FORCE</option>
+            <option value="Excessive force">Excessive force</option>
           
-            <option value="CIVIL RIGHTS - POLICE">CIVIL RIGHTS - POLICE</option>
+            <option value="Failure to Intervene">Failure to Intervene</option>
           
-            <option value="CIVIL RIGHTS COMPLAINT/FALSE ARREST">CIVIL RIGHTS COMPLAINT/FALSE ARREST</option>
+            <option value="Failure to Provide Medical Care">Failure to Provide Medical Care</option>
           
-            <option value="DENIAL OF MEDICAL CARE">DENIAL OF MEDICAL CARE</option>
+            <option value="False Arrest">False Arrest</option>
           
-            <option value="DOMESTIC VIOLENCE">DOMESTIC VIOLENCE</option>
+            <option value="False Imprisonment">False Imprisonment</option>
           
-            <option value="DUI">DUI</option>
+            <option value="First Amendment Violation">First Amendment Violation</option>
           
-            <option value="DUI STOP">DUI STOP</option>
+            <option value="Illegal/Unreasonable Search">Illegal/Unreasonable Search</option>
           
-            <option value="EXCESSIVE FORCE">EXCESSIVE FORCE</option>
+            <option value="Illegal/Unreasonable Seizure">Illegal/Unreasonable Seizure</option>
           
-            <option value="EXCESSIVE FORCE SERIOUS">EXCESSIVE FORCE SERIOUS</option>
+            <option value="Illinois Domestic Act">Illinois Domestic Act</option>
           
-            <option value="EXCESSIVE FORCE/DENIAL OF MEDICAL CARE">EXCESSIVE FORCE/DENIAL OF MEDICAL CARE</option>
+            <option value="Intentional Infliction of Emotional Distress">Intentional Infliction of Emotional Distress</option>
           
-            <option value="EXCESSIVE FORCE/ELBOW STRIKE">EXCESSIVE FORCE/ELBOW STRIKE</option>
+            <option value="Intrusion/Invasion of Privacy">Intrusion/Invasion of Privacy</option>
           
-            <option value="EXCESSIVE FORCE/FAILURE TO INTERVENE">EXCESSIVE FORCE/FAILURE TO INTERVENE</option>
+            <option value="Malicious Prosecution">Malicious Prosecution</option>
           
-            <option value="EXCESSIVE FORCE/FAILURE TO PROTECT">EXCESSIVE FORCE/FAILURE TO PROTECT</option>
+            <option value="Negligence">Negligence</option>
           
-            <option value="EXCESSIVE FORCE/FALSE ARREST/EMOTIONAL">EXCESSIVE FORCE/FALSE ARREST/EMOTIONAL</option>
+            <option value="Other 1983/Civil Rights Violations">Other 1983/Civil Rights Violations</option>
           
-            <option value="EXCESSIVE FORCE/ILLEGAL SEARCH">EXCESSIVE FORCE/ILLEGAL SEARCH</option>
+            <option value="Policies and Practices ("Monell")">Policies and Practices ("Monell")</option>
           
-            <option value="EXCESSIVE FORCE/ILLEGAL SEIZURE">EXCESSIVE FORCE/ILLEGAL SEIZURE</option>
+            <option value="Reckless Conduct">Reckless Conduct</option>
           
-            <option value="EXCESSIVE FORCE/MALICIOUS PROSECUTION">EXCESSIVE FORCE/MALICIOUS PROSECUTION</option>
+            <option value="Survival Action">Survival Action</option>
           
-            <option value="EXCESSIVE FORCE/MINOR">EXCESSIVE FORCE/MINOR</option>
+            <option value="Trespass">Trespass</option>
           
-            <option value="EXCESSIVE FORCE/SERIOUS">EXCESSIVE FORCE/SERIOUS</option>
+            <option value="Unlawful Detention">Unlawful Detention</option>
           
-            <option value="EXCESSIVE FORCE/TASER">EXCESSIVE FORCE/TASER</option>
+            <option value="Willful and Wanton Misconduct">Willful and Wanton Misconduct</option>
           
-            <option value="EXCESSIVE FORCE/WRONGFUL DEATH">EXCESSIVE FORCE/WRONGFUL DEATH</option>
+            <option value="Wrongful Death">Wrongful Death</option>
           
-            <option value="EXTENDED DETENTION">EXTENDED DETENTION</option>
-          
-            <option value="EXTENDED DETENTION/MALICIOUS PROSEC.">EXTENDED DETENTION/MALICIOUS PROSEC.</option>
-          
-            <option value="EXTENDED DETENTION/MALICIOUS PROSECUTION">EXTENDED DETENTION/MALICIOUS PROSECUTION</option>
-          
-            <option value="FAILURE TO PROVIDE MEDICAL CARE">FAILURE TO PROVIDE MEDICAL CARE</option>
-          
-            <option value="FALSE ARREST">FALSE ARREST</option>
-          
-            <option value="FALSE ARREST/CONSPIRACY">FALSE ARREST/CONSPIRACY</option>
-          
-            <option value="FALSE ARREST/EXCESSIVE FORCE">FALSE ARREST/EXCESSIVE FORCE</option>
-          
-            <option value="FALSE ARREST/MALICIOUS PROSECUTION">FALSE ARREST/MALICIOUS PROSECUTION</option>
-          
-            <option value="FALSE ARREST/UNLAWFUL SEARCH">FALSE ARREST/UNLAWFUL SEARCH</option>
-          
-            <option value="FEES AND COSTS">FEES AND COSTS</option>
-          
-            <option value="ILLEGAL SEARCH/SEIZURE">ILLEGAL SEARCH/SEIZURE</option>
-          
-            <option value="ILLEGAL SEIZURE">ILLEGAL SEIZURE</option>
-          
-            <option value="ILLEGAL SEIZURE OF PROPERTY">ILLEGAL SEIZURE OF PROPERTY</option>
-          
-            <option value="ILLEGAL SEIZURE/EXCESSIVE FORCE CLAIMS">ILLEGAL SEIZURE/EXCESSIVE FORCE CLAIMS</option>
-          
-            <option value="ILLEGAL STOP AND FALSE ARREST">ILLEGAL STOP AND FALSE ARREST</option>
-          
-            <option value="ILLEGAL STOP AND SEARCH">ILLEGAL STOP AND SEARCH</option>
-          
-            <option value="MALICIOUS PROSECUTION">MALICIOUS PROSECUTION</option>
-          
-            <option value="MONELL">MONELL</option>
-          
-            <option value="OTHER POLICE MISCONDUCT">OTHER POLICE MISCONDUCT</option>
-          
-            <option value="OTHER POLICE MISCONDUCT: NON-INTENT.">OTHER POLICE MISCONDUCT: NON-INTENT.</option>
-          
-            <option value="POLICE MISCONDUCT">POLICE MISCONDUCT</option>
-          
-            <option value="REVERSE CONVICTION">REVERSE CONVICTION</option>
-          
-            <option value="REVERSED CONVICTION">REVERSED CONVICTION</option>
-          
-            <option value="SEARCH, WARRANT, WRONG ADDRESS">SEARCH, WARRANT, WRONG ADDRESS</option>
-          
-            <option value="UNLAWFUL SEARCH">UNLAWFUL SEARCH</option>
-          
-            <option value="UNLAWFUL SEARCH AND SEIZURE">UNLAWFUL SEARCH AND SEIZURE</option>
-          
-            <option value="UNLAWFUL SEARCH/FALSE ARREST">UNLAWFUL SEARCH/FALSE ARREST</option>
-          
-            <option value="UNLAWFUL SEIZURE">UNLAWFUL SEIZURE</option>
-          
-            <option value="UNREASONABLE SEARCH">UNREASONABLE SEARCH</option>
-          
-            <option value="UNREASONABLE SEARCH & SEIZURE">UNREASONABLE SEARCH & SEIZURE</option>
-          
-            <option value="VIOLATED FIRST AMENDMENT RIGHTS">VIOLATED FIRST AMENDMENT RIGHTS</option>
-          
-            <option value="VIOLATION OF CIVIL RIGHTS ACT">VIOLATION OF CIVIL RIGHTS ACT</option>
-          
-            <option value="VIOLATION OF PLAINTIFFS RIGHTS">VIOLATION OF PLAINTIFFS RIGHTS</option>
-          
-            <option value="WARRANT/KNOCK AND ANNOUNCE">WARRANT/KNOCK AND ANNOUNCE</option>
-          
-            <option value="WRONGFUL SEARCH">WRONGFUL SEARCH</option>
+            <option value="lllinois Domestic Violence Act">lllinois Domestic Violence Act</option>
           
         </select>
       </div>
